# Python_Playground

./: ArduinoValuePlotterViaSerialCommunication.py  GoodPractices.py  GreaterNumber.py  ML101_1.1.py  PartialStringCopy.py  PostgreSQL.py  TCPClient.py  TCPServer.py  Untitled-1.ipynb  lizy test.py  ping.csv  ping.py  pyproject.toml  speed.csv  speed_graph.py  speed_monitoring.py  speeds.csv
Games/: guess.ipynb  guess.py
MinimalServerClientInteractions/: UDPClient.py  UDPServer.py
W3Tutorial/: Booleans.py  Classes.py  DataTypes.py  Datetime.py  Dictionaries.py  Exceptions.py  For.py  Functions.py  If...Else.py  Inheritance.py  Iterators.py  JSON.py  Lambda.py  Lists.py  Math.py  Modules.py  Operators.py  RegEx.py  Sets.py  Strings.py  Tuples.py  Variables.py  While.py
