[tool.poetry]
name = "python-playground"
version = "0.1.0"
description = ""
authors = ["Taenar97 <sven1997@gmx.net>"]
readme = "README.md"
packages = [{include = "python_playground"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
